stacks (old)/znc/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: znc
  namespace: znc
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`your.domain.com`)
    middlewares:
    - name: chain-authelia
      namespace: default
    services:
    - name: znc
      namespace: znc
      port: 6502
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: znc
  namespace: znc
spec:
  entryPoints:
  - irc
  routes:
  - match: HostSNI(`your.domain.com`)
    services:
    - name: znc
      namespace: znc
      port: 6501
  tls: {}
